--- a/css/estilos.css
+++ b/css/estilos.css
@@ -39,9 +39,9 @@ header{
 }
 
 .btn-carrito{
-      background-color: black;
-      color: white;
-      border-radius: 10px;
+      background-color: white;
+      color: black;
+      border-color: white;
 }
 
 .card-body{
